# runtrade

./: .dockerignore  .gitignore  Dockerfile  skaffold.yaml
.github/workflows/: docker-push.yml
backend/: Cargo.toml  diesel.toml
backend/migrations/2020-11-18-103338_create_database/: down.sql  up.sql
backend/src/: main.rs  schema.rs
backend/src/api/: auth.rs  mod.rs  routes.rs
backend/src/db/: insertables.rs  mod.rs  model.rs  operations.rs  schema.rs
k8s/: keycloak.yml  postgres.yml  runtrade.yml
k8s/secrets/: keycloak.yml  postgres.yml  runtrade.yml
webapp/: .env  .env.dev  package-lock.json  package.json  vue.config.js
webapp/public/: index.html
webapp/src/: App.vue  api.js  api.js.map  api.ts  main.js  main.js.map  main.ts
webapp/src/components/: AddEvent.vue  AddTrade.vue  HelloWorld.vue  SearchEvent.vue  SelectEvent.vue  Trade.vue  steps.vue
